# progetto_sistemi_operativi

./: CMakeLists.txt  F4Client  F4Client.c  F4Server  F4Server.c  Makefile  README.md  debug.h  defines.c  defines.h  err_exit.c  err_exit.h  fifo.c  fifo.h  semaphore.c  semaphore.h  shared_memory.c  shared_memory.h
